--- a/Start-Bootstrap/index.html
+++ b/Start-Bootstrap/index.html
@@ -10,6 +10,9 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap"
         rel="stylesheet">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css"
+        integrity="sha512-DTOQO9RWCH3ppGqcWaEA1BIZOC6xxalwEsw9c2QQeAIftl+Vegovlnee1c9QX4TctnWMn13TZye+giMm8e2LwA=="
+        crossorigin="anonymous" referrerpolicy="no-referrer" />
 </head>
 
 <body>
@@ -33,20 +36,32 @@
             <img src="https://startbootstrap.github.io/startbootstrap-freelancer/assets/img/avataaars.svg" alt="">
         </div>
         <strong>START BOOTSTRAP</strong>
-        <h5>Graphic Artist - Web Designer - Illustrator</h5>
         <div class="icon">
             <div class="star_line"></div>
-            <i class="fa-regular fa-star"></i>
+            <i class="fa-solid fa-star"></i>
             <div class="star_line"></div>
         </div>
-    </section>
+        <h5>Graphic Artist - Web Designer - Illustrator</h5>
 
+    </section>
 
     <section class="section3">
         <div class="container1">
             <h2>PORTFOLIO</h2>
+            <div class="icon1">
+                <div class="star_line1"></div>
+                <i class="fa-solid fa-star"></i>
+                <div class="star_line1"></div>
+            </div>
         </div>
-        
+        <div class="item">
+            <div class="image1"></div>
+            <div class="image1"></div>
+            <div class="image1"></div>
+            <div class="image1"></div>
+            <div class="image1"></div>
+            <div class="image1"></div>
+        </div>
     </section>
 </body>
 
